2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c, lib/commonio.c, lib/groupio.c: Added missing
	include of <assert.h>

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Replace HAVE_UTMPX_H by USE_UTMPX.
	* lib/prototypes.h, libmisc/log.c: Added splint annotations.
	* libmisc/log.c: Added SYSLOG warning when lseek fails (should not
	happen).

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/mail.c, libmisc/copydir.c: Added missing include of
	<assert.h>

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/env.c: Added assertions on the snprintf results.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Added configure option --enable-utmpx,
	disabled by default. This defines USE_UTMPX, which should be used
	instead of HAVE_UTMPX_H.
	* libmisc/utmp.c: Replace HAVE_UTMPX_H by USE_UTMPX.
	* libmisc/utmp.c: Removed old comment on HAVE_STRUCT_UTMP_UT_ID
	and UTMPX support.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix typo.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Close the databases before changing the UDI and
	GID.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/myname.c: Updated splint annotations.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Added splint annotations.
	* lib/commonio.c: old_context should be local to commonio_close(),
	not global.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Do not freecon strings duplicated with strdup.
	Also avoid allocation of memory.
	* src/passwd.c: Use SYSLOG instead of syslog.

2009-04-25  Miroslav Kure  <kurem@upcase.inf.upol.cz>

	* po/cs.po: Updated to 352T7f8u

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>
